tests/typechecking/valid/let2.ml
let x= 5.1 +. 5.6 in
let y=1.5 +. x in
let e=x+.y+.5.2 in()





