tests/typechecking/invalid/let1.ml
let x= 5 +. 5 in
let y=2 + x in
()
